# internal/model/user.go
@@ -22,8 +22,19 @@ type LoginRequest struct {
 	Password string `json:"password"`
 }
 
+type RefreshRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
+type LogoutRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
 type AuthResult struct {
-	User        User   `json:"user"`
-	AccessToken string `json:"access_token"`
-	TokenType   string `json:"token_type"`
+	User                  User   `json:"user"`
+	AccessToken           string `json:"access_token"`
+	RefreshToken          string `json:"refresh_token"`
+	TokenType             string `json:"token_type"`
+	AccessTokenExpiresIn  int64  `json:"access_token_expires_in"`
+	RefreshTokenExpiresIn int64  `json:"refresh_token_expires_in"`
 }
